--- a/Instructions/20537A_LAB_AK_08.md
+++ b/Instructions/20537A_LAB_AK_08.md
@@ -86,49 +86,54 @@ Systems
 
 6.  In the **Certificate Import Wizard** popup window that opens, click **OK**.
 
-7.  On **MAS-HOST01,** click **Start**, then click **Windows PowerShell**.
+7.  On **MAS-HOST01**, click **Start**, then click **Windows PowerShell**.
 
 8.  In the **Windows PowerShell** window that opens, type the following command
     and then press enter:
 
+```
 Resolve-DnsName adminmanagement.local.azurestack.external
+```
 
-1.  Make a note of the **IP Address** that is returned.
+9.  Make a note of the **IP Address** that is returned.
 
-2.  Type the following command and then press enter:
+10. Type the following command and then press enter:
 
+```
 Resolve-DnsName adfs.local.azurestack.external
+```
 
-1.  Make a note of the **IP Address** that is returned.
+11. Make a note of the **IP Address** that is returned.
 
-2.  Leave the **Windows PowerShell** window open for reference.
+12. Leave the **Windows PowerShell** window open for reference.
 
-3.  Return to the **SCOM01** connection.
+13. Return to the **SCOM01** connection.
 
-4.  Navigate to **C:\\Windows\\System32\\drivers\\etc** and then open the
+14. Navigate to **C:\\Windows\\System32\\drivers\\etc** and then open the
     **Hosts** file with **Notepad**.
 
-5.  Add two new lines to the end of the **Hosts** file as shown below:
+15. Add two new lines to the end of the **Hosts** file as shown below:
 
+```
 192.168.102.7 adminmanagement.local.azurestack.external
-
 192.168.102.5 adfs.local.azurestack.external
+```
 
-1.  If it is different, Replace the **IP Address** for
+16. If it is different, Replace the **IP Address** for
     **adminmanagement.local.azurestack.external** with the **IP Address**
     obtained in **Step 9**.
 
-2.  If it is different, Replace the **IP Address** for
+17. If it is different, Replace the **IP Address** for
     a**dfs.local.azurestack.external** with the **IP Address** obtained in
     **Step 11**.
 
-3.  Note that there should be a space between the **IP address** and the **DNS**
+18. Note that there should be a space between the **IP address** and the **DNS**
     name but they should both be on the same line. You should have added two
     additional lines to the end of the Hosts file.
 
-4.  Save and then close the **Hosts** file.
+19. Save and then close the **Hosts** file.
 
-5.  Restart **SCOM01** and then login and start the **Operations Console** using
+20. Restart **SCOM01** and then login and start the **Operations Console** using
     the **Steps 5 – 14** in the previous task.
 
 ####   Task 3: Configuring the Microsoft Azure Management Pack
@@ -205,77 +210,79 @@ Manager.
 4.  On the **Discovery Method** page, click **Browse for, or type-in computer
     names** then in the box below type the following computer name:
 
--   ADVM
+    -   ADVM
 
-1.  Click **Next**.
+5.  Click **Next**.
 
-2.  On the **Administrator Account** page click **Other user account** and then
+6.  On the **Administrator Account** page click **Other user account** and then
     complete the settings as follows:
 
--   User name: **demoadmin**
+    -   User name: **demoadmin**
 
--   Password: **Password12345**
+    -   Password: **Password12345**
 
--   Domain: **AD**
+    -   Domain: **AD**
 
-1.  Click **Discover**.
+7.  Click **Discover**.
 
-2.  On the **Select Objects to Manage** page select **ADVM.ad.contoso.com** and
+8.  On the **Select Objects to Manage** page select **ADVM.ad.contoso.com** and
     then click **Next**.
 
-3.  On the **Summary** page, click **Other** and then provide the following
+9.  On the **Summary** page, click **Other** and then provide the following
     settings:
 
--   User name: **demoadmin**
+    -   User name: **demoadmin**
 
--   Password: **Password12345**
+    -   Password: **Password12345**
 
--   Domain: **AD**
+    -   Domain: **AD**
 
-1.  . Click **Finish**.
+10. Click **Finish**.
 
-2.  Wait until the agent is deployed to the virtual machine and then close the
+11.  Wait until the agent is deployed to the virtual machine and then close the
     **Agent Management Task Status** window.
 
-3.  Leave the **Operations Console** open.
+12.  Leave the **Operations Console** open.
 
-4.  In the **Azure Stack** portal on **MAS-HOST01** that is logged in using the
+13.  In the **Azure Stack** portal on **MAS-HOST01** that is logged in using the
     **ASUserX** account, click **Virtual Machines**.
 
-5.  In the **Virtual machines** blade, click **ADVM**.
+14.  In the **Virtual machines** blade, click **ADVM**.
 
-6.  In the **ADVM** blade, click **Connect**.
+15.  In the **ADVM** blade, click **Connect**.
 
-7.  When prompted with **“Do you open or save ADVM.rdp (90 bytes) from
+16.  When prompted with **“Do you open or save ADVM.rdp (90 bytes) from
     portal.azurestack.external?”** click **Open**.
 
-8.  In the **Remote Desktop Connection** dialog, click **Connect**.
+17.  In the **Remote Desktop Connection** dialog, click **Connect**.
 
-9.  In the **Windows Security** dialog, click **More choices.**
+18.  In the **Windows Security** dialog, click **More choices.**
 
-10. Click **Use a different account**.
+19. Click **Use a different account**.
 
-11. In the **Username** box, type **.\\DemoAdmin**.
+20. In the **Username** box, type **.\\DemoAdmin**.
 
-12. In the Password box, enter **Password12345.**
+21. In the Password box, enter **Password12345.**
 
-13. Click **OK**.
+22. Click **OK**.
 
-14. In the **Remote Desktop Connection** window that opens, click **Yes**.
+23. In the **Remote Desktop Connection** window that opens, click **Yes**.
 
-15. On **ADVM**, right-click **Start**, then click **Command Prompt (Admin)**.
+24. On **ADVM**, right-click **Start**, then click **Command Prompt (Admin)**.
 
-16. In the **Command Prompt (Admin)** window that opens, navigate to
+25. In the **Command Prompt (Admin)** window that opens, navigate to
     **C:\\Program Files\\Microsoft Monitoring Agent\\Agent** and then type the
     following commands and then press enter after each:
 
-hslockdown "ContosoAS" /R "NT AUTHORITY\\SYSTEM"
+```
+hslockdown "ContosoAS" /R "NT AUTHORITY\SYSTEM"
 
 net stop healthservice
 
 net start healthservice
+```
 
-1.  Close the **Command Prompt (Admin)** window, and then sign out of **ADVM**.
+26.  Close the **Command Prompt (Admin)** window, and then sign out of **ADVM**.
 
 ####   Task 2: Importing the Operations Manager Management Packs
 
@@ -378,54 +385,54 @@ is monitoring the Tailspin Toys guest workloads.
 
 3.  Sign into **Azure Stack** with the following credentials:
 
--   Username: **AzureStack\\AzureStackAdminX**
+    -   Username: **AzureStack\\AzureStackAdminX**
 
--   Password: **Pa55w.rd**
+    -   Password: **Pa55w.rd**
 
-1.  In the **Microsoft Azure Stack – Administration** Portal, click **More
+4.  In the **Microsoft Azure Stack – Administration** Portal, click **More
     Services** and then under **Administration**, click **Region Management.**
 
-2.  In the **local** blade that opens notice in the **Alerts** section there is
+5.  In the **local** blade that opens notice in the **Alerts** section there is
     a **Warning** alert.
 
-3.  Click **Warning**.
+6.  Click **Warning**.
 
-4.  In the **Alerts** blade that opens click the **Infrastructure role instance
+7.  In the **Alerts** blade that opens click the **Infrastructure role instance
     unavailable** alert.
 
-5.  In the **Alert Details** blade that opens review the following properties:
+8.  In the **Alert Details** blade that opens review the following properties:
 
--   Name
+    -   Name
 
--   Severity
+    -   Severity
 
--   Status
+    -   Status
 
--   Component
+    -   Component
 
--   Description
+    -   Description
 
--   Remediation
+    -   Remediation
 
-1.  Close the **Infrastructure role instance unavailable** blade.
+9.  Close the **Infrastructure role instance unavailable** blade.
 
-2.  Close the **Alerts** blade.
+10. Close the **Alerts** blade.
 
-3.  In **Hyper-V Manager**, right-click **AzS-CA01** and then click **Start**.
+11. In **Hyper-V Manager**, right-click **AzS-CA01** and then click **Start**.
     This step should only be performed by the instructor with the students
     viewing.
 
-4.  Wait for 5 minutes.
+12. Wait for 5 minutes.
 
-5.  Press **F5** in the **Azure Stack Portal** to refresh the page.
+13. Press **F5** in the **Azure Stack Portal** to refresh the page.
 
-6.  Notice the **Warning** alert has now disappeared as the problem no longer
+14. Notice the **Warning** alert has now disappeared as the problem no longer
     exists.
 
-7.  Click the **Microsoft Azure Stack – Administration** title to return to the
+15. Click the **Microsoft Azure Stack – Administration** title to return to the
     home page.
 
-8.  Leave **Internet Explorer** open.
+16. Leave **Internet Explorer** open.
 
 ####   Task 3: Reviewing Azure Stack Audit Logs
 
@@ -454,58 +461,58 @@ is monitoring the Tailspin Toys guest workloads.
 9.  In the **Detail** blade that opens, review the information provided
     including:
 
--   Caller
+    -   Caller
 
--   Resource Group
+    -   Resource Group
 
--   Category
+    -   Category
 
--   Level
+    -   Level
 
-1.  Close the **Detail** blade.
+10. Close the **Detail** blade.
 
-2.  Close the **Update resource group** blade.
+11. Close the **Update resource group** blade.
 
-3.  Close the **Audit Logs** blade.
+12. Close the **Audit Logs** blade.
 
-4.  Click **Resource Groups** and then in the **Resource group blade** that
+13. Click **Resource Groups** and then in the **Resource group blade** that
     opens click the **TestX** Resource Group.
 
-5.  In the **TestX** blade that opens, click **Delete**.
+14. In the **TestX** blade that opens, click **Delete**.
 
-6.  In the **Type the Resource Group name** box type **TestX** and then click
+15. In the **Type the Resource Group name** box type **TestX** and then click
     **Delete**.
 
-7.  Wait until the **TestX** Resource Group has been deleted.
+16. Wait until the **TestX** Resource Group has been deleted.
 
-8.  Close the **Resource groups** blade.
+17. Close the **Resource groups** blade.
 
-9.  Click **More Services** and then scroll down and click **Audit Logs**.
+18. Click **More Services** and then scroll down and click **Audit Logs**.
 
-10. Click the log entry that displays an **Operation** of **Delete resource
+19. Click the log entry that displays an **Operation** of **Delete resource
     group**. You may need to refresh the page until it appears.
 
-11. In the **Delete resource group** blade that opens, click the **Delete
+20. In the **Delete resource group** blade that opens, click the **Delete
     resource group** log entry that displays a **Status** of **Succeeded**.
 
-12. In the **Detail** blade that opens, review the information provided
+21. In the **Detail** blade that opens, review the information provided
     including:
 
--   Caller
+    -   Caller
 
--   Resource Group
+    -   Resource Group
 
--   Category
+    -   Category
 
--   Level
+    -   Level
 
-1.  Close the **Detail** blade.
+22. Close the **Detail** blade.
 
-2.  Close the **Delete resource group** blade.
+23. Close the **Delete resource group** blade.
 
-3.  Close the **Audit Logs** blade.
+24. Close the **Audit Logs** blade.
 
-4.  Close the Azure Stack Portal.
+25. Close the Azure Stack Portal.
 
 **Results**: After this exercise, you should have used the **Active Alerts**
 section in **Region Management** to review the alert information that is
